jira-sts/jira-sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jira-set
  name: jira-set
  namespace: jira
  annotations:
    # haproxy.org/check: "true"
    # haproxy.org/forwarded-for: "false"
    # haproxy.org/load-balance: "roundrobin"
    # haproxy.org/cookie-persistence: "mycookie"
spec:
  selector:
    app: jira-set
  ports:
  - name: port-jira
    port: 8080
    protocol: TCP
    targetPort: 8080
  externalIPs:
    - 192.168.22.142
    - 192.168.22.143
    - 192.168.22.144
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: jira-set
  name: jira-set
  namespace: jira
spec:
  serviceName: "jira-set"
  replicas: 1
  # kubectl scale statefulset/jira-set --replicas=3 -n jira
  selector:
    matchLabels:
      app: jira-set
  template:
    metadata:
      labels:
        app: jira-set
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8sw1
                      - k8sw2
                      - k8sw3
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8sw3
            - weight: 80
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8sw2
            - weight: 50
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8sw1
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: jira-set
      terminationGracePeriodSeconds: 5  
      containers:
      - image: atlassian/jira-software #:8.15.0-ubuntu
        imagePullPolicy: Always
        resources:
           requests:
             memory: "4G"
             cpu: 1
           limits:
             memory: "6G"
             cpu: 4
        name: jira-set
        readinessProbe:
          httpGet:
            port: 8080
            path: /status
          initialDelaySeconds: 60
          periodSeconds: 15
          successThreshold: 2
          failureThreshold: 2
          timeoutSeconds: 5
        ports:
          - containerPort: 8080
            name: jiraport
          - containerPort: 40001
            name: jiraclusterport
        volumeMounts:
        - name: jira-pvc-data
          mountPath: "/var/atlassian/application-data/jira"
        - name: jira-pvc-shared
          mountPath: "/var/atlassian/shared"
      volumes:
        - name: jira-pvc-data
          emptyDir:
            {}
        - name: jira-pvc-shared
          persistentVolumeClaim:
            claimName: jira-pvc-shared
