jira-sts/postgres-deploy.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jira-db-postgres 
  labels:                 
    app: jira-db-postgres
  namespace: jira
spec:
  ports:
  - name: port-db
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: jira-db-postgres

---

apiVersion:  apps/v1 
kind: Deployment
metadata:
  name: jira-db-postgres
  labels:
    app: jira-db-postgres
  namespace: jira
spec:
  selector:
    matchLabels:
      app: jira-db-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jira-db-postgres
    spec:
      containers:
      - image: postgres:latest
        imagePullPolicy: Always
        resources:
           requests:
             memory: "2G"
             cpu: 2
           limits:
             memory: "4G"
             cpu: 4
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres-jira
        volumeMounts:
        - name: postgres-jira-data 
          mountPath: "/var/lib/postgresql/data"
      volumes:
      - name: postgres-jira-data   
        persistentVolumeClaim:
          claimName: postgres-jira-data
