jira-sts/jira-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira-st-ingress
  namespace: jira
spec:
  tls:
  - hosts:
      - jira.kubernetes.local
    secretName: jira
  rules:
  - host: jira.kubernetes.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jira-set
            port:
              number: 8080


# !!
# ingress:   
#   ...
#   annotations: 
#     nginx.ingress.kubernetes.io/session-cookie-name	: "CUSTOMCOOKIE"

  # name: sticky-session-test
  # annotations:
  #   nginx.ingress.kubernetes.io/affinity: "cookie"
  #   nginx.ingress.kubernetes.io/session-cookie-name: "route"
  #   nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
